fix: m-lines overlapping margin

--- a/src/style/components/SkillList/SkillList.scss
+++ b/src/style/components/SkillList/SkillList.scss
@@ -6,7 +6,11 @@
 
   &__button {
     position: absolute;
-    top: 0;
-    left: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  &__levels {
+    margin-top: 72px;
   }
 }
